--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,15 @@ environment:
 dependencies:
   angular: ^5.2.0
   angular_components: ^0.11.0
+  built_collection: ^4.1.0
+  built_value: ^6.3.0
   redux: ^3.0.0
 
 dev_dependencies:
   angular_test: ^2.2.0
   build_runner: ^1.1.2
   build_test: ^0.10.3
+  built_value_generator: ^6.3.0
   build_web_compilers: ^1.0.0
   pedantic: ^1.0.0
   test: ^1.5.1
