--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,18 @@ description: A web app that uses AngularDart Components
 # author: podkorytov <email@example.com>
 
 environment:
-  sdk: '>=2.1.0 <3.0.0'
+  sdk: '>=2.2.0 <3.0.0'
 
 dependencies:
   angular: ^5.2.0
   angular_components: ^0.11.0
   built_collection: ^4.1.0
   built_value: ^6.3.0
+  http: ^0.12.0
+  json_annotation: ^2.0.0
   redux: ^3.0.0
   redux_epics: ^0.10.4
-  rxdart: ^0.21.0
+  rxdart: ^0.20.0
 
 dev_dependencies:
   angular_test: ^2.2.0
@@ -22,5 +24,6 @@ dev_dependencies:
   build_test: ^0.10.3
   built_value_generator: ^6.3.0
   build_web_compilers: ^1.0.0
+  json_serializable: ^2.0.0
   pedantic: ^1.0.0
   test: ^1.5.1
