add ability for using backend

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,10 +10,12 @@ include: package:pedantic/analysis_options.yaml
 #     - camel_case_types
 
 analyzer:
-  exclude: [build/**]
+  exclude:
+    - build/**
+    - lib/src/**/**.g.dart
   errors:
     uri_has_not_been_generated: ignore
   # Angular plugin support is in beta. You're welcome to try it and report
   # issues: https://github.com/dart-lang/angular_analyzer_plugin/issues
-  # plugins:
-    # - angular
+  plugins:
+   - angular
