--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   redux: ^3.0.0
   redux_epics: ^0.10.4
   rxdart: ^0.20.0
+  angular_router: ^2.0.0-alpha+21
 
 dev_dependencies:
   angular_test: ^2.2.0
