--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .packages
 .pub/
 build/
+
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
@@ -14,3 +15,5 @@ doc/api/
 
 # WebStorm files
 .idea
+
+.DS_Store
