--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,9 @@ include: package:pedantic/analysis_options.yaml
 #     - camel_case_types
 
 analyzer:
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
   exclude:
     - build/**
     - lib/src/**/**.g.dart
