--- a/default.conf
+++ b/default.conf
@@ -1,1 +1,10 @@
-try_files $uri $uri/ /index.html;
+server {
+    listen       8080;
+    server_name  localhost;
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+    }
+}
