--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen       8080;
-    server_name  localhost;
+    listen       80;
+    server_name  35.204.62.230 ;
 
     location / {
         root   /usr/share/nginx/html;
