--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dev_dependencies:
   build_test: ^0.10.3
   built_value_generator: ^6.3.0
   build_web_compilers: ^1.0.0
-  json_serializable: ^2.0.0
+  json_serializable: 2.0.2
   pedantic: ^1.0.0
   test: ^1.5.1
   sass_builder: ^2.1.2
