--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   angular: ^5.2.0
   angular_components: ^0.11.0
+  angular_router: ^2.0.0-alpha+21
   built_collection: ^4.1.0
   built_value: ^6.3.0
   http: ^0.12.0
@@ -17,15 +18,14 @@ dependencies:
   redux: ^3.0.0
   redux_epics: ^0.10.4
   rxdart: ^0.20.0
-  angular_router: ^2.0.0-alpha+21
 
 dev_dependencies:
   angular_test: ^2.2.0
-  build_runner: ^1.1.2
+  build_runner: ^1.2.0
   build_test: ^0.10.3
   built_value_generator: ^6.3.0
   build_web_compilers: ^1.0.0
-  json_serializable: 2.0.2
+  json_serializable: ^2.0.0
   pedantic: ^1.0.0
   test: ^1.5.1
   sass_builder: ^2.1.2
