--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   redux: ^3.0.0
   redux_epics: ^0.10.4
   rxdart: ^0.20.0
+  socket_io_client: ^0.9.1
 
 dev_dependencies:
   angular_test: ^2.2.0
