--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   angular_router: ^2.0.0-alpha+21
   built_collection: ^4.1.0
   built_value: ^6.3.0
+  gtag_analytics: ^0.1.7+2
   http: ^0.12.0
   json_annotation: ^2.0.0
   redux: ^3.0.0
