--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
     args:
       - '-c'
       - |
-        [[ "$BRANCH_NAME" == "master" ]] && /builder/kubectl.bash set image deployment codefestx nginx-front=gcr.io/rndcloud-codefest-wrike-tech/codefestx:REVISION_ID || echo "skipping . . ."
+        [[ "$BRANCH_NAME" == "master" ]] && /builder/kubectl.bash set image deployment codefestx nginx-front=gcr.io/rndcloud-codefest-wrike-tech/codefestx:$REVISION_ID || echo "skipping . . ."
     env:
     - 'CLOUDSDK_COMPUTE_ZONE=europe-west4-a'
     - 'CLOUDSDK_CONTAINER_CLUSTER=codefest'
