--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   angular_router: ^2.0.0-alpha+21
   built_collection: ^4.1.0
   built_value: ^6.3.0
+  collection: ^1.14.11
   gtag_analytics: ^0.1.7+2
   http: ^0.12.0
   json_annotation: ^2.0.0
