add k8s configs for KickOff

--- a/.kube/nginx-wrike-border-ingress.yaml
+++ b/.kube/nginx-wrike-border-ingress.yaml
@@ -11,6 +11,7 @@ spec:
   - secretName: codefest-tls
     hosts:
     - "codefest.wrike.tech"
+    - "kickoff.wrike.tech"
   rules:
   - host: "codefest.wrike.tech"
     http:
@@ -19,3 +20,10 @@ spec:
         backend:
           serviceName: codefestx
           servicePort: 80
+  - host: "kickoff.wrike.tech"
+    http:
+      paths:
+        - path: /
+          backend:
+            serviceName: kickoff
+            servicePort: 80
