Initial for DartUp 2019

--- a/.kube/nginx-wrike-border-ingress.yaml
+++ b/.kube/nginx-wrike-border-ingress.yaml
@@ -12,6 +12,7 @@ spec:
     hosts:
     - "codefest.wrike.tech"
     - "kickoff.wrike.tech"
+    - "dartup.wrike.tech"
   rules:
   - host: "codefest.wrike.tech"
     http:
@@ -26,4 +27,11 @@ spec:
         - path: /
           backend:
             serviceName: kickoff
+            servicePort: 80
+  - host: "dartup.wrike.tech"
+    http:
+      paths:
+        - path: /
+          backend:
+            serviceName: dartup
             servicePort: 80
