--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,14 @@ dependencies:
   collection: ^1.14.11
   gtag_analytics: ^0.1.7+2
   http: ^0.12.0
+  intl: ^0.15.8
+  js: ^0.6.0
   json_annotation: ^2.0.0
   redux: ^3.0.0
   redux_epics: ^0.10.4
-  rxdart: ^0.20.0
   reselect: ^0.4.0
+  rxdart: ^0.20.0
   socket_io_client: ^0.9.1
-  js: ^0.6.0
 
 dev_dependencies:
   angular_test: ^2.2.0
