--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   build_test: ^0.10.3
   built_value_generator: ^6.3.0
   build_web_compilers: ^1.0.0
+  intl_translation: ^0.17.0
   json_serializable: ^2.0.0
   pedantic: ^1.0.0
   test: ^1.5.1
