--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  codefest.wrike.tech;
+    server_name  dartup.wrike.tech;
 
     location / {
         root   /usr/share/nginx/html;
